[package]
name = "dvote-rs"
version = "0.5.0"
authors = ["dappfuse <5128827-dappfuse@users.noreply.gitlab.com>"]
edition = "2018"

[lib]
name = "dvote"

[dependencies]
hex = "0.4.2"
base64 = "0.12.3"
poseidon-rs = { git = "https://github.com/arnaucube/poseidon-rs", rev = "4cba42e76ae1bad266bead39499112d4284840a6" }
num-bigint = "0.2.6"
tiny-bip39 = "0.7.3"
tiny-hderive = "0.2.1"
ethsign = "0.7.3"
sha3 = "0.9.1"
